@@ -1,12 +1,72 @@
+:root {
+  --font-color: #212529;
+  --background-color: #ffffff;
+  --card-header-background-color: rgba(0, 0, 0, 0.03);
+  --card-border-color: rgba(0, 0, 0, 0.125);
+  --row-position-color: #f2ffd5;
+  --row-mlat-color: #caece6;
+  --row-interesting-color: #ffbf00;
+  --row-squawk7500-color: #00bed7;
+  --row-squawk7600-color: #f1f000;
+  --row-squawk7700-color: #f4003b;
+  --row-specialDE-color: #94cd00;
+  --row-selected-color: #b7c9d3;
+  --aircraft-marker-selected-color: crimson;
+  --form-control-color: #495057;
+  --custom-control-checked-color: #007bff;
+  --btn-link-color: #007bff;
+  --btn-success-color: #28a745;
+  --btn-danger-color: #dc3545;
+  --btn-secondary-color: #ffffff;
+  --alt-background-image-meters: url('../images/alt_legend_meters.svg');
+  --alt-background-image-feet: url('../images/alt_legend_feet.svg');
+}
+
+[data-theme='dark'] {
+  --font-color: #c0c0c0;
+  --background-color: #121212;
+  --card-header-background-color: #212121;
+  --card-border-color: rgba(255, 255, 255, 0.25);
+  --row-position-color: #263238;
+  --row-mlat-color: #006064;
+  --row-interesting-color: #e65100;
+  --row-squawk7500-color: #01579b;
+  --row-squawk7600-color: #bf360c;
+  --row-squawk7700-color: #b71c1c;
+  --row-specialDE-color: #1b5e20;
+  --row-selected-color: #546e7a;
+  --aircraft-marker-selected-color: #ad1457;
+  --form-control-color: #c0c0c0;
+  --custom-control-checked-color: #0d47a1;
+  --btn-link-color: #ab47bc;
+  --btn-success-color: #33691e;
+  --btn-danger-color: #b71c1c;
+  --btn-secondary-color: #212121;
+  --alt-background-image-meters: url('../images/alt_legend_meters_dark.svg');
+  --alt-background-image-feet: url('../images/alt_legend_feet_dark.svg');
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
+  background-color: var(--background-color);
   font-family: Roboto, Tahoma, Sans-Serif;
   font-size: 10pt;
   overflow: auto;
   height: 100%;
+  color: var(--font-color);
+}
+
+::-webkit-scrollbar-track,
+::-webkit-scrollbar {
+  background-color: var(--background-color);
+}
+
+::-webkit-scrollbar-button,
+::-webkit-scrollbar-thumb {
+  background: var(--card-header-background-color);
+  border-radius: 5px;
 }
 
 div#loading {
@@ -16,7 +76,7 @@ div#loading {
   top: 0;
   bottom: 0;
   right: 0;
-  background: #000;
+  background: var(--background-color);
   opacity: 0.8;
   filter: alpha(opacity=80);
 }
@@ -64,7 +124,7 @@ div#loading {
   left: 40px;
   top: 10px;
   min-width: 360px;
-  background: #ffffff;
+  background: var(--background-color);
   box-shadow: 4px 4px 10px #444444;
   cursor: pointer;
   z-index: 1200; /* Highest z-index in leaflet is 1000 */
@@ -78,8 +138,8 @@ div#loading {
 }
 
 .aircraftListHead {
-  background-color: #005587;
-  color: #ffffff;
+  background-color: var(--card-header-background-color);
+  color: var(--font-color);
   cursor: pointer;
 }
 .aircraftListHead td {
@@ -105,7 +165,7 @@ div#loading {
 }
 
 #altitudeChartButton {
-  background-image: url('../images/alt_legend_feet.svg');
+  background-image: var(--alt-background-image-feet);
   background-size: auto;
   background-color: transparent;
   width: 100%;
@@ -116,13 +176,13 @@ div#loading {
 }
 
 .altitudeMeters {
-  background-image: url('../images/alt_legend_meters.svg') !important;
+  background-image: var(--alt-background-image-meters) !important;
 }
 
 #popInfo {
   max-width: 200px;
-  background-color: white;
-  color: black;
+  background-color: var(--background-color);
+  color: var(--font-color);
   opacity: 0.85;
   font-size: 8pt;
   font-family: sans-serif;
@@ -192,38 +252,38 @@ span#selectedWindDirection {
 }
 
 .vPosition {
-  background-color: #f2ffd5;
+  background-color: var(--row-position-color);
 }
 .mlat {
-  background-color: #caece6;
+  background-color: var(--row-mlat-color);
 }
 .interesting {
-  background-color: #ffbf00;
+  background-color: var(--row-interesting-color);
 }
 .squawk7500 {
   font-weight: bold;
-  background-color: #00bed7;
+  background-color: var(--row-squawk7500-color);
 }
 .squawk7600 {
   font-weight: bold;
-  background-color: #f1f000;
+  background-color: var(--row-squawk7600-color);
 }
 .squawk7700 {
   font-weight: bold;
-  background-color: #f4003b;
+  background-color: var(--row-squawk7700-color);
 }
 .squawkSpecialDE {
   font-weight: bold;
-  background-color: #94cd00;
+  background-color: var(--row-specialDE-color);
 }
 .selected {
-  background-color: #b7c9d3;
+  background-color: var(--row-selected-color);
 }
 
 .aircraft-marker-selected {
   outline-style: dashed;
   outline-width: 1.5px;
-  outline-color: crimson;
+  outline-color: var(--aircraft-marker-selected-color);
 }
 
 @keyframes blink {
@@ -250,8 +310,18 @@ span#selectedWindDirection {
 }
 
 /* Style of follow aircraft icon in selected infoblock */
-.follow-icon {
-  background-image: url('../images/icons/bullseye.svg');
+.follow-lock-icon {
+  background-image: url('../images/icons/lock-fill.svg');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 16px;
+}
+
+/* Style of follow aircraft icon in selected infoblock */
+.follow-unlock-icon {
+  background-image: url('../images/icons/unlock-fill.svg');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -263,10 +333,10 @@ span#selectedWindDirection {
 .leaflet-btn-control {
   width: 25px;
   height: 25px;
-  box-shadow: none;
-  background: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+  background: var(--background-color);
   border-radius: 5px;
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-style: none;
   background-clip: padding-box;
 }
 
@@ -317,7 +387,7 @@ span#selectedWindDirection {
   padding: 0.375rem 0.75rem;
   font-weight: 400;
   line-height: 1.5;
-  color: white;
+  color: var(--background-color);
   background-color: #6c757d;
   border: 1px solid #6c757d;
   border-radius: 0.25rem;
@@ -374,19 +444,16 @@ span#selectedWindDirection {
 }
 
 /* Override leaflet defaults */
-/* Override style of leaflet layer selector button */
-.leaflet-touch .leaflet-control-layers-toggle {
-  background-size: 16px;
-  width: 21px;
-  height: 21px;
-}
 
 /* Override style of leaflet zoom buttons */
-.leaflet-touch .leaflet-bar a {
-  width: 21px;
-  height: 21px;
-  line-height: 21px;
+.leaflet-touch,
+.leaflet-bar a {
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
   font-size: 1.5em;
+  background-color: var(--background-color);
+  color: var(--font-color);
 }
 
 .leaflet-control-layers-group-name {
@@ -404,6 +471,8 @@ span#selectedWindDirection {
   padding-right: 10px;
 }
 
+/* Override style of leaflet layer selector button */
+.leaflet-retina .leaflet-control-layers-toggle,
 .leaflet-control-layers-toggle {
   background-image: url('../images/icons/map.svg');
   background-repeat: no-repeat;
@@ -411,12 +480,15 @@ span#selectedWindDirection {
   background-size: contain;
   width: 25px;
   height: 25px;
+  background-color: var(--background-color);
+  color: var(--font-color);
+  border-radius: 5px;
 }
 
 .leaflet-tooltip {
   position: absolute;
-  background-color: #fff;
-  color: #222;
+  background-color: var(--background-color);
+  color: var(--font-color);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -427,7 +499,7 @@ span#selectedWindDirection {
   font-size: 8pt;
   font-family: sans-serif;
   margin: 5px;
-  border: 1px solid #222;
+  border: 1px solid var(--card-border-color);
   border-radius: 10px 10px 10px 0;
   padding: 2px 5px 2px 5px;
   white-space: pre-wrap;
@@ -439,6 +511,12 @@ span#selectedWindDirection {
   border-right-color: transparent;
 }
 
+.leaflet-control-layers,
+.leaflet-control-layers-expanded {
+  background-color: var(--background-color);
+  color: var(--form-control-color);
+}
+
 /* Overwrite bootstrap defaults */
 .col-form-label-sm {
   padding-top: 0px;
@@ -447,10 +525,16 @@ span#selectedWindDirection {
 
 .card-header {
   padding: 0px;
+  background-color: var(--card-header-background-color);
 }
 
 .card-body {
   padding: 0.25rem;
+}
+
+.card {
+  background-color: var(--background-color);
+  border-color: var(--card-border-color);
 }
 
 /* Override style of progress bar */
@@ -488,4 +572,49 @@ span#selectedWindDirection {
   height: calc(1em + 0.75rem + 2px);
   color: #495057;
   border: 1px solid #6c757d;
+}
+
+.form-control,
+.form-control:focus,
+.custom-select,
+.dropdown-menu,
+.dropdown-toggle,
+.custom-control-label::before {
+  background-color: var(--background-color);
+  color: var(--form-control-color);
+  border: 1px solid var(--card-border-color);
+}
+
+.dropdown-item {
+  color: var(--form-control-color);
+}
+
+.custom-control-input:checked ~ .custom-control-label::before {
+  color: var(--form-control-color);
+  border-color: var(--custom-control-checked-color);
+  background-color: var(--custom-control-checked-color);
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+  background-color: var(--background-color);
+}
+
+.btn-success {
+  color: var(--background-color);
+  background-color: var(--btn-success-color);
+  border-color: var(--btn-success-color);
+}
+
+.btn-link {
+  color: var(--btn-link-color);
+}
+
+.btn-danger {
+  color: var(--font-color);
+  background-color: var(--btn-danger-color);
+  border-color: var(--btn-danger-color);
+}
+
+.btn-secondary {
+  color: var(--btn-secondary-color);
 }
