@@ -734,7 +734,6 @@
                 <div class="dropdown p-1">
                   <button
                     class="btn btn-sm btn-outline-secondary dropdown-toggle"
-                    style="border-color: #ced4da;"
                     type="button"
                     id="dropdownMenuButton"
                     data-toggle="dropdown"
@@ -828,6 +827,20 @@
                       class="custom-control-label col-form-label-sm"
                       for="showAdditionalDataCheck"
                       data-i18n="settings.showAdditionalData"
+                    ></label>
+                  </div>
+                  <div
+                    class="custom-control custom-switch custom-control-inline col-auto"
+                  >
+                    <input
+                      type="checkbox"
+                      class="custom-control-input"
+                      id="useDarkThemeCheck"
+                    />
+                    <label
+                      class="custom-control-label col-form-label-sm"
+                      for="useDarkThemeCheck"
+                      data-i18n="settings.darkTheme"
                     ></label>
                   </div>
                   <div
