@@ -5,6 +5,9 @@ var READSB;
         static Init() {
             this.lMap = L.map("lMapCanvas", {
                 doubleClickZoom: false,
+                wheelPxPerZoomLevel: 120,
+                zoomDelta: 0.5,
+                zoomSnap: 0,
             }).setView([READSB.AppSettings.CenterLat, READSB.AppSettings.CenterLon], READSB.AppSettings.ZoomLevel);
             L.control.button({
                 callback: this.OnHideSidebarButtonClick.bind(this),
