@@ -243,11 +243,16 @@ namespace READSB {
             let conversionFactor = 1000.0;
 
             if (AppSettings.SiteLat !== undefined && AppSettings.SiteLon !== undefined) {
+                let color = "black";
+                if (AppSettings.UseDarkTheme) {
+                    color = "#606060";
+                }
+
                 if (DefaultShowSite) {
                     site.push(L.circleMarker(L.latLng(AppSettings.SiteLat, AppSettings.SiteLon), {
-                        color: "white",
+                        color,
                         fill: true,
-                        fillColor: "black",
+                        fillColor: color,
                         fillOpacity: 0.7,
                         isActive: false,
                         name: "site",
@@ -272,7 +277,7 @@ namespace READSB {
 
                         const circle = this.MakeGeodesicCircle(L.latLng(AppSettings.SiteLat, AppSettings.SiteLon), distance, 360);
                         siteCirclesGroup.addLayer(L.polyline(circle, {
-                            color: "black",
+                            color: color,
                             fill: false,
                             opacity: 0.7,
                             smoothFactor: 0.7,
